# ChangeLog for media-gfx/inkscape
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.176 2012/05/31 17:37:59 radhermit Exp $

  31 May 2012; Tim Harder <radhermit@gentoo.org> inkscape-0.48.3.1.ebuild:
  Conditionally apply fix for >=poppler-0.20 (bug #418167 by James Cloos, patch
  from Arch).

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> inkscape-0.48.2.ebuild,
  inkscape-0.48.3.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  08 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> inkscape-0.48.3.1.ebuild:
  Replace dev-python/pyxml dependency with python.eclass and
  PYTHON_USE_WITH="xml" wrt #367761

*inkscape-0.48.3.1 (23 Feb 2012)

  23 Feb 2012; Tim Harder <radhermit@gentoo.org> +inkscape-0.48.3.1.ebuild:
  Version bump.

  14 Nov 2011; Diego E. Pettenò <flameeyes@gentoo.org> inkscape-0.48.2.ebuild:
  QA: make sure to request C++ support in ImageMagick.

  27 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  inkscape-0.48.2.ebuild:
  Slot gtkspell dependency to 2 in preparation for gtkspell-3.

  21 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -inkscape-0.47.ebuild,
  -files/inkscape-0.47-gcc45.patch, -files/inkscape-0.47-poppler.patch,
  -inkscape-0.48.0.ebuild, -files/inkscape-0.48.0-libwpd.patch,
  -files/inkscape-0.48.0-poppler-0.16.patch:
  old

  21 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> inkscape-0.48.2.ebuild:
  x86 stable wrt #387199

  18 Oct 2011; Jeroen Roovers <jer@gentoo.org> inkscape-0.48.2.ebuild:
  Stable for HPPA (bug #387199).

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> inkscape-0.48.2.ebuild:
  ppc/ppc64 stable wrt #387199

  15 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -inkscape-0.48.1.ebuild,
  -inkscape-0.48.1-r1.ebuild, -files/inkscape-0.48.1-gcc-4.6.patch:
  old

  15 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> inkscape-0.48.2.ebuild:
  amd64 stable wrt #387199
