@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/inkscape
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.176 2012/05/31 17:37:59 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/inkscape/ChangeLog,v 1.177 2012/06/16 16:30:05 ssuominen Exp $
+
+  16 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> inkscape-0.48.2.ebuild,
+  inkscape-0.48.3.1.ebuild, metadata.xml:
+  Use global USE flag "postscript" instead of local USE flag "gs" for
+  PostScript support
 
   31 May 2012; Tim Harder <radhermit@gentoo.org> inkscape-0.48.3.1.ebuild:
   Conditionally apply fix for >=poppler-0.20 (bug #418167 by James Cloos, patch
